# ssh-at

./: .gitignore  Cargo.toml  README-zh.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml  test.yml
crates/ssh-at-core/: Cargo.toml
crates/ssh-at-core/benches/: key_scanning.rs
crates/ssh-at-core/src/: lib.rs
crates/ssh-at-core/src/config/: crud.rs  mod.rs  parser.rs  simple_parser.rs  ssh.pest
crates/ssh-at-core/src/keys/: generator.rs  mod.rs  scanner.rs  types.rs
crates/ssh-at-core/src/proxy/: mod.rs
crates/ssh-at-core/tests/: integration_test.rs  size_test.rs
crates/ssh-at-storage/: Cargo.toml
crates/ssh-at-storage/src/: backup.rs  lib.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  tray.rs
src-tauri/src/commands/: backup.rs  config.rs  keys.rs  mod.rs  settings.rs  system.rs
src/api/: tauri.ts
src/pages/: BackupsPage.tsx  HostsPage.tsx  KeysPage.tsx
