[package]
name = "ssh-at"
version = "0.1.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin-dialog = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ssh-at-core = { workspace = true }
ssh-at-storage = { workspace = true }
dirs = "6.0.0"
tauri-plugin-clipboard-manager = "2.3.2"
image = "0.25"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSApplication"] }
objc2-foundation = "0.3"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

# Automatically enable custom-protocol in release builds
[profile.release]
inherits = "release"
