[package]
name = "ssh-at-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
pest = "2.7"
pest_derive = "2.7"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
ssh-at-storage = { path = "../ssh-at-storage" }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "key_scanning"
harness = false
